Added "End early" button

--- a/source/template.html
+++ b/source/template.html
@@ -1,5 +1,5 @@
-<!--link rel="stylesheet" type="text/css" href="style.css">
-<script src="script.js" defer></script-->
+<link rel="stylesheet" type="text/css" href="style.css">
+<script src="script.js" defer></script>
 
 <div class="label default-question-text-size" id="label">{{{LABEL}}}</div>
 <div class="hint default-hint-text-size" id="hint">{{{HINT}}}</div>
@@ -14,6 +14,7 @@
     <button onclick="restartconf('timer')" class="counterdown" id="counterdown" style="font-size: 10pt;">Restart
         timer</button>
     <button onclick="restartconf('counter')" class="counterdown" id="counterdown" style="font-size: 10pt;">Restart
-        counter</button>
-    <div id="restartconfirm" style="margin-top: 10px;"></div>
+        counter</button><br>
+        <button onclick="endEarly()" class="counterdown" id="counterdown" style="font-size: 10pt;">End early</button>
+    <div id="confirmation" style="margin-top: 10px;"></div>
 </div>
