Added way to continue where left off if ended early

--- a/source/template.html
+++ b/source/template.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" href="style.css">
-<script src="script.js" defer></script>
+<!--link rel="stylesheet" type="text/css" href="style.css">
+<script src="script.js" defer></script-->
 
 <div class="label default-question-text-size" id="label">{{{LABEL}}}</div>
 <div class="hint default-hint-text-size" id="hint">{{{HINT}}}</div>
