Adjusted size of buttons so they can fit on one screen

--- a/source/template.html
+++ b/source/template.html
@@ -8,13 +8,13 @@
 <div class="buttons label default-question-text-size">
     <button onclick="startStopTimer()" class="startstop" id="startstop">Start</button><br>
     <button onclick="countup()" class="counterup" id="counterup">Counter</button><br>
-    <button onclick="countdown()" class="counterdown" id="counterdown" style="font-size: 10pt;">Counter down</button>
+    <button onclick="countdown()" class="counterdown small" id="counterdown" style="font-size: 10pt;">Counter down</button>
 </div>
 <div id="restartbuttons" class="buttons label default-question-text-size">
-    <button onclick="restartconf('timer')" id="restarttimer" style="font-size: 10pt;">Restart
+    <button onclick="restartconf('timer')" id="restarttimer" class="small">Restart
         timer</button>
-    <button onclick="restartconf('counter')"id="restartcounter" style="font-size: 10pt;">Restart
+    <button onclick="restartconf('counter')"id="restartcounter" class="small">Restart
         counter</button><br>
-        <button onclick="endEarly()" id="endearly" style="font-size: 10pt;">End early</button>
+        <button onclick="endEarly()" id="endearly" class="small">End early</button>
     <div id="confirmation" style="margin-top: 10px;"></div>
 </div>
