Added support for media in label

--- a/source/template.html
+++ b/source/template.html
@@ -2,6 +2,25 @@
 <script src="script.js" defer></script>
 
 <div class="label default-question-text-size" id="label">{{{LABEL}}}</div>
+
+{{#MEDIAIMAGE}}
+    <img src="{{MEDIAIMAGE}}" />
+{{/MEDIAIMAGE}}
+
+{{#MEDIAAUDIO}}
+    <audio controls>
+        <source src="{{MEDIAAUDIO}}">
+        Your browser does not support the audio element.
+    </audio>
+{{/MEDIAAUDIO}}
+
+{{#MEDIAVIDEO}}
+    <video width="100%" height="*" controls>
+        <source src="{{MEDIAVIDEO}}">
+        Your browser does not support the video tag.
+    </video>
+{{/MEDIAVIDEO}}
+
 <div class="hint default-hint-text-size" id="hint">{{{HINT}}}</div>
 <div id="timer" class="label default-question-text-size"></div>
 <div id="countdiv">Count:&nbsp;<span id="count">0</span></div>
