Updated counter button button colors and labels

--- a/source/template.html
+++ b/source/template.html
@@ -26,8 +26,8 @@
 <div id="countdiv">Count:&nbsp;<span id="count">0</span></div>
 <div class="buttons label default-question-text-size">
     <button onclick="startStopTimer()" class="startstop" id="startstop">Start</button><br>
-    <button onclick="countup()" class="counterup" id="counterup">Counter</button><br>
-    <button onclick="countdown()" class="counterdown small" id="counterdown" style="font-size: 10pt;">Counter down</button>
+    <button onclick="countup()" class="counterup" id="counterup">Count +</button><br>
+    <button onclick="countdown()" class="counterdown small" id="counterdown" style="font-size: 10pt;">Count -</button>
 </div>
 <div id="restartbuttons" class="buttons label default-question-text-size">
     <button onclick="restartconf('timer')" id="restarttimer" class="small">Restart
