Updated colors of buttons and re-made ZIP file

--- a/source/template.html
+++ b/source/template.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" href="style.css">
-<script src="script.js" defer></script>
+<!--link rel="stylesheet" type="text/css" href="style.css">
+<script src="script.js" defer></script-->
 
 <div class="label default-question-text-size" id="label">{{{LABEL}}}</div>
 
@@ -34,6 +34,6 @@
         timer</button>
     <button onclick="restartconf('counter')"id="restartcounter" class="small">Restart
         counter</button><br>
-        <button onclick="endEarly()" id="endearly" class="small">End early</button>
+        <button onclick="endEarly()" id="endearly" class="small endearly">End early</button>
     <div id="confirmation" style="margin-top: 10px;"></div>
 </div>
